--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.associations": {
         "atividade 1": "cpp",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "biblioteca.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
